--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dayjs": "^1.10.7",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
